Page layout break issue on create rectr page

--- a/src/screens/CreateRetro/styles.scss
+++ b/src/screens/CreateRetro/styles.scss
@@ -21,7 +21,6 @@
   display: flex !important;
   justify-content: center !important;
   align-items: center !important;
-  overflow-y: auto !important;
 }
 .createRetroText {
   font-family: 'Poppins' !important;
